Informacoes do projeto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="container">
-        <h1>Calculadora</h1>
+        <h1>Calculadora online</h1>
         <section class="calculator">
             <div class="input-box">
                 <input type="text" id="display" disabled>
